<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_status_indicator"
    android:backgroundTint="?android:attr/colorBackground"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_hosts"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_btn_refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Refresh"
            android:src="@drawable/ic_action_refresh"
            android:tint="?android:attr/textColorSecondary" />
            
        <ImageView
            android:id="@+id/widget_btn_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/label_add_host"
            android:src="@drawable/ic_action_add"
            android:tint="?android:attr/textColorSecondary" />
    </LinearLayout>

    <ListView
        android:id="@+id/widget_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:attr/listDivider"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/widget_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_hosts"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone" />

</LinearLayout>